# any.down

./: .dockerignore  .gitignore  AGENT_API_HANDOFF.md  Dockerfile  Makefile  README.md  anydo_client.py  anydown.py  config.json.example  crontab  debug_login.py  docker-compose.yml  entrypoint.sh  find_duplicate_tasks.py  pyproject.toml  requirements.txt  run_tests.py  session.json.example  setup.py
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
.github/workflows/: docker.yml
jobs/log/: anydo-snapshot.json
scripts/: smoke_test_readonly.py
src/anydown/: __init__.py  agent_query.py  api.py  cli.py  client.py  debug_login.py  find_duplicates.py
tests/: __init__.py  test_agent_query.py  test_anydo_client.py  test_anydown.py  test_api.py  test_find_duplicates.py  test_ntfy.py
